@@ -21,9 +21,10 @@ func LoadGeoIPData(config Geoip) *libgeo.GeoIP {
 		geoipPaths = *config.Paths
 	}
 	if len(geoipPaths) == 0 {
-		logp.Info("GeoIP disabled: No paths were set under shipper.geoip.paths")
 		// disabled
 		return nil
+	} else {
+		logp.Warn("GeoIP lookup support is deprecated and will be removed in version 6.0.")
 	}
 
 	// look for the first existing path
