@@ -44,13 +44,6 @@ refresh_topology_freq: 10
 # refresh_topology_freq. The default is 15 seconds.
 topology_expire: 15
 
-# Configure local GeoIP database support.
-# If no paths are not configured geoip is disabled.
-#geoip:
-#paths:
-#  - "/usr/share/GeoIP/GeoLiteCity.dat"
-#  - "/usr/local/var/GeoIP/GeoLiteCity.dat"
-
 ------------------------------------------------------------------------------
 
 ==== Top Level Options
@@ -192,13 +185,27 @@ default is the number of logical CPUs available in the system.
 
 ===== geoip.paths
 
-This configuration option is currently used by Packetbeat only.
+deprecated[5.0.0, Please use the https://www.elastic.co/guide/en/elasticsearch/plugins/master/ingest-geoip.html[Geoip processor in Ingest Node] or the https://www.elastic.co/guide/en/logstash/current/plugins-filters-geoip.html[Logstash GeoIP filter] instead]
+
+This configuration option is currently used by Packetbeat only and it will be removed in version 6.0.
 
 The paths to search for GeoIP databases. The Beat loads the first installed GeoIP database
 that if finds. Then, for each transaction, the Beat exports the GeoIP location of the client.
 
 The recommended values for geoip.paths are `/usr/share/GeoIP/GeoLiteCity.dat`
 and `/usr/local/var/GeoIP/GeoLiteCity.dat`.
+
+Example:
+
+[source,yaml]
+------------------------------------------------------------------------------
+# Configure local GeoIP database support.
+# If no paths are not configured geoip is disabled.
+geoip:
+  paths:
+    - "/usr/share/GeoIP/GeoLiteCity.dat"
+    - "/usr/local/var/GeoIP/GeoLiteCity.dat"
+------------------------------------------------------------------------------
 
 *Important*: For GeoIP support to function correctly, the
 https://dev.maxmind.com/geoip/legacy/geolite/[GeoLite City database] is required.
